# complexia

./: CMakeCache.txt  CMakeLists.txt  Makefile  backend.c  backend.h  cmake_install.cmake  parser.c  parser.h
complexia_graph/: squares.h
tests/: test_eval.c  test_lexer.c  test_parser.c
utils/: complexia_cli.c
